# Collision-Avoidance-jetbot

src/jetbot_navigation/: package.xml  setup.py
src/jetbot_navigation/jetbot_navigation/: keyboard_control.py  navigator.py  object_detector.py
src/jetbot_navigation/jetbot_navigation/yolov8_rs/: yolov8_rs.py
src/jetbot_navigation/launch/: bringup.launch.py
src/my_package/: package.xml  setup.py
src/py_pubsub/: package.xml  setup.py
src/slam/: package.xml  setup.py
src/slam/octomap_integration/: CMakeLists.txt  package.xml
src/slam/octomap_integration/launch/: display.launch.py  first_robot_gazebo.launch.py  robot_spawn.launch.py
src/slam/octomap_integration/model/box/: model.sdf
src/slam/octomap_integration/model/mir_world/: model.config  model.sdf
src/slam/octomap_integration/model/person_standing/: model.sdf
src/slam/octomap_integration/model/sphere/: model.sdf
src/slam/octomap_integration/src/: my_node.cpp
src/slam/octomap_integration/urdf/: first_robot.urdf  second_robot.urdf
src/slam/octomap_integration/world/: my_world.world
src/traffic_sign_recognition/: package.xml  setup.cfg  setup.py
src/traffic_sign_recognition/launch/: bringup.launch.py
src/traffic_sign_recognition/traffic_sign_recognition/: TrafficSign_model.h5  decision_maker_node.py  traffic_sign_node.py
